--- a/CRUD-Exercise/config/config.json
+++ b/CRUD-Exercise/config/config.json
@@ -1,30 +1,19 @@
 {
-  "development": {
-    "username": "postgres",
-    "password": "viettu041922",
-    "database": "crud_exercise",
-    "host": "127.0.0.1",
-    "dialect": "postgres",
-    "port": 5432
-  },
-  "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "production": {
-    "username": "ttbhanh",
-    "password": "5u89vX7AhNbF2hmIFrOitKoTcAA0HV3N",
-    "database": "tuandb",
-    "host": "dpg-clfb5a7jc5ks73e5n3n0-a.oregon-postgres.render.com",
-    "dialect": "postgres",
-    "dialectOptions": {
-      "ssl": {
-        "require": true,
-        "rejectUnauthorized": false
-      }
+    "development": {
+      "username": "postgres",
+      "password": "viettu041922",
+      "database": "crud_exercise",
+      "host": "127.0.0.1",
+      "dialect": "postgres",
+      "port": 5432
+    },
+    "production": {
+      "username": "postgres",
+      "password": "OwBZWSLOpjZbXRxddWjyyDEAJBIyCGcJ",
+      "database": "railway",
+      "host": "autorack.proxy.rlwy.net",
+      "dialect": "postgres",
+      "port": "17699"
     }
   }
-}
+  
